c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/compare_mixed_pointer_types.c
/* It's illegal to compare two different pointer types */
int main(void) {
    int *x = 0ul;
    unsigned *y = 0ul;
    return x == y;
}